--- a/src/styles.css
+++ b/src/styles.css
@@ -50,6 +50,11 @@ body {
   padding-bottom: 1rem;
 }
 
+.primary-header__title {
+  font-size: 1.5rem;
+  margin: 1rem 2rem;
+}
+
 .primary-nav {
   display: flex;
   flex-direction: column;
@@ -132,6 +137,7 @@ body {
   height: 0;
   padding-bottom: 56.25%;
   margin: 0 auto;
+  margin-bottom: 2rem;
 }
 
 .vid-figures__vid {
@@ -148,7 +154,9 @@ body {
   position: absolute;
   bottom: -3.7rem;
   text-align: left;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
+  font-style: italic;
+  line-height: 1.2;
 }
 
 /* definim l'estil de totes les llistes que hi ha a la pàgina */
@@ -192,7 +200,7 @@ body {
 /* pels dispositius mòbils molt petits, reduïm la mida del títol principal  */
 @media screen and (max-width: 350px) {
   .primary-header__title {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 }
 
@@ -205,6 +213,10 @@ body {
   body {
     width: 60vw;
     text-align: left;
+  }
+
+  .primary-header__title {
+    font-size: 2rem;
   }
 
   .primary-nav {
