--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,6 +24,7 @@ body {
   padding-bottom: 0;
   align-items: center;
   justify-content: space-between;
+  height: 100%;
 }
 
 /* definició de l'estil del header principal */
@@ -87,6 +88,10 @@ body {
 .footer__font {
   width: 60vw * 1.4;
   margin: 0 auto;
+}
+
+.footer__font > p {
+  margin: 0.75rem 1rem;
 }
 
 /* definim els colors i estil dels links de la pàgina
