--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,12 +4,6 @@
   box-sizing: border-box;
 }
 
-/* afegir scroll per tal de que el header fixat no molesti quan
-   s'accedeix a un enllaç de l'índex */
-html {
-  scroll-padding-top: 225px;
-}
-
 body {
   display: flex;
   flex-direction: column;
@@ -59,9 +53,7 @@ body {
 .primary-nav {
   display: flex;
   flex-direction: column;
-
-  /* pels dispositius mòbils augmentem una mica l'amplada */
-  width: 60vw * 1.25;
+  width: 75vw;
   margin: 1rem auto;
   justify-content: center;
 }
@@ -86,7 +78,7 @@ body {
 }
 
 .footer__font {
-  width: 60vw * 1.4;
+  width: 84vw;
   margin: 0 auto;
 }
 
@@ -94,8 +86,9 @@ body {
   margin: 0.75rem 1rem;
 }
 
-/* definim els colors i estil dels links de la pàgina
-   i dels que tenen un fons (capçalera i peu de pàgina principalment) */
+/* definim els colors i estil dels links de la pàgina,
+   dels que tenen un fons (capçalera i peu de pàgina 
+   principalment) i dels títols en el text */
 .text-link {
   color: #89ab0d;
   text-decoration: none;
@@ -134,6 +127,8 @@ body {
   color: #823f0eb4;
 }
 
+/* definició de l'estil, mida i posició de les
+diferents imatges i vídeos de la pàgina*/
 .img-figures {
   margin: 0;
   margin-bottom: 0.8rem;
@@ -177,12 +172,7 @@ body {
   line-height: 1.2;
 }
 
-/* definim l'estil de totes les llistes que hi ha a la pàgina */
-.list--no-style {
-  padding-left: 0;
-  list-style-type: none;
-}
-
+/* per les imatges de la galeria es defineix un grid */
 .img-galeria {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -213,6 +203,12 @@ body {
   text-align: center;
   background-color: rgba(50, 75, 36, 0.75);
   color: #f2f4ea;
+}
+
+/* definim l'estil de totes les llistes que hi ha a la pàgina */
+.list--no-style {
+  padding-left: 0;
+  list-style-type: none;
 }
 
 /* pels dispositius mòbils molt petits, reduïm la mida del títol principal  */
@@ -253,7 +249,7 @@ body {
 
   /* ajustem l'ampla perquè s'adapti a diferents mides de pantalla */
   .footer__font {
-    width: calc(60vw * 1.25 - 10%);
+    width: calc(75vw - 10%);
   }
 }
 
@@ -263,11 +259,11 @@ body {
   }
 
   body {
-    width: 60vw * 0.8;
+    width: 48vw;
   }
 
   .img-figures__image {
-    width: 60vw * 0.8;
+    width: 48vw;
     max-width: 850px;
   }
 
@@ -291,6 +287,8 @@ body {
     position: revert;
   }
 
+  /* afegim el següent codi per tal que quan passem el ratolí
+  per sobre se'ns mostri la caption de les imatges de la galeria */
   .img-galeria__caption {
     transition: all 300ms ease-in-out;
     opacity: 0;
