added images and webp

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,5 @@
 @import 'npm:@fortawesome/fontawesome-free/css/all.css';
+@import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap');
 
 * {
   box-sizing: border-box;
@@ -21,41 +22,32 @@ body {
   height: 100%;
 }
 
+.logo {
+  min-width: 80px;
+  min-height: 80px;
+  background: url('/src/img/logo.svg') 0 / contain no-repeat;
+  margin: auto;
+}
+
 /* definició de l'estil del header principal */
 .primary-header {
-  /* es defineix la posició sticky per tal de que
-     el header es mantingui sempre visible a dalt */
-  position: sticky;
-  top: 0;
-
-  /* es defineix un z-index per assegurar que cap altre element amb
-     una posició definida pugui posar-se per davant de la capçalera */
-  z-index: 5;
-
-  /* s'afegeix un petit difuminat del color de la pàgina perquè el
-     canvi entre la capçalera i l'article de la pàgina sigui més suau */
-  border-bottom: 2px solid #f2f4ea;
-  box-shadow: 0 2px 2px 1px #f2f4ea;
-
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   width: 100vw;
   color: #f2f4ea;
-  text-align: center;
   background-color: #6c7840;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  text-align: left;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .primary-header__title {
+  font-family: 'Caveat Brush', sans-serif;
   font-size: 1.5rem;
-  margin: 1rem 2rem;
-}
-
-.primary-nav {
-  display: flex;
-  flex-direction: column;
-  width: 75vw;
-  margin: 1rem auto;
-  justify-content: center;
+  line-height: 2rem;
+  text-transform: uppercase;
+  margin: 1rem 0.5rem;
 }
 
 .main {
@@ -66,7 +58,10 @@ body {
 }
 
 .footer {
-  font-size: 0.75rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  font-size: 0.9rem;
   line-height: 1.2;
   margin-top: 2rem;
   width: 100vw;
@@ -77,13 +72,18 @@ body {
   padding-bottom: 1rem;
 }
 
-.footer__font {
-  width: 84vw;
-  margin: 0 auto;
+.footer--logo {
+  min-width: 50px;
+  min-height: 50px;
+  background: url('/src/img/logo.svg') 0 / contain no-repeat;
+  margin: auto;
 }
 
-.footer__font > p {
-  margin: 0.75rem 1rem;
+.footer--nav-menu {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  justify-content: center;
 }
 
 /* definim els colors i estil dels links de la pàgina,
@@ -135,7 +135,21 @@ diferents imatges i vídeos de la pàgina*/
 }
 
 .img-figures__image {
-  max-width: 100%;
+  width: 100%;
+}
+
+.img-figures__image--clipped {
+  width: 100%;
+  clip-path: polygon(
+    0% 100%,
+    28% 26%,
+    72% 26%,
+    100% 100%,
+    0 100%,
+    50% 26%,
+    32% 0,
+    68% 0
+  );
 }
 
 .img-figures__captions {
@@ -175,8 +189,8 @@ diferents imatges i vídeos de la pàgina*/
 /* per les imatges de la galeria es defineix un grid */
 .img-galeria {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-auto-rows: minmax(100px, auto);
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  grid-auto-rows: minmax(15vh, 200px);
   gap: 2rem;
   margin-bottom: 3rem;
 }
@@ -215,6 +229,7 @@ diferents imatges i vídeos de la pàgina*/
 @media screen and (max-width: 350px) {
   .primary-header__title {
     font-size: 1.2rem;
+    line-height: 1.2rem;
   }
 }
 
@@ -229,27 +244,79 @@ diferents imatges i vídeos de la pàgina*/
     text-align: left;
   }
 
+  .logo {
+    background-size: contain;
+    width: calc(20px + 7vw);
+    height: calc(20px + 7vw);
+    min-width: 50px;
+    min-height: 50px;
+  }
+
+  .primary-header {
+    flex-direction: row;
+    padding-left: 20vw;
+    padding-right: 20vw;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
   .primary-header__title {
-    font-size: 2rem;
+    width: 75%;
+    font-size: calc(1rem + 2vw);
+    line-height: calc(1rem + 2vw);
+    text-align: left;
+    margin: auto;
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .primary-nav {
-    width: 60vw;
-    flex-flow: row wrap;
+  .footer {
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 20vw;
+    padding-right: 20vw;
   }
 
-  /* afegim un punt entre els elements de la llista de l'índex de navegació */
-  .primary-nav > li:not(:last-child)::after {
-    content: ' ·\00a0';
+  .footer--logo {
+    margin: auto 0;
+  }
+
+  .footer--nav {
+    margin: auto 0;
+  }
+
+  .footer--xarxes-socials {
+    margin: auto 0;
+  }
+
+  .footer--xarxes-socials > a:not(:first-child) {
+    margin-left: 0.3rem;
   }
 
   .img-figures__image {
     width: 60vw;
   }
+}
 
-  /* ajustem l'ampla perquè s'adapti a diferents mides de pantalla */
-  .footer__font {
-    width: calc(75vw - 10%);
+@media screen and (min-width: 730px) {
+  .decorative-img {
+    float: left;
+    position: relative;
+    top: calc(-65px - 10vw);
+    left: calc(100px + 20vw);
+    min-width: calc(100px + 15vw);
+    min-height: calc(60px + 10vw);
+    margin: auto;
+    margin-bottom: calc(-70px - 10vw);
+    opacity: 0.7;
+  }
+
+  .castellfollit {
+    background: url('/src/img/castellfollit-cingle.svg') 0 / contain no-repeat;
+  }
+
+  .sta-margarida {
+    background: url('/src/img/sta-margarida-ermita.svg') 0 / contain no-repeat;
   }
 }
 
@@ -262,29 +329,51 @@ diferents imatges i vídeos de la pàgina*/
     width: 48vw;
   }
 
+  .primary-header {
+    padding: 0.5rem 26vw;
+  }
+
+  .logo {
+    max-width: 120px;
+    max-height: 120px;
+  }
+
+  .primary-header__title {
+    font-size: max(2.6rem);
+    line-height: max(2.6rem);
+  }
+
+  .footer {
+    padding-left: 27vw;
+    padding-right: 27vw;
+    gap: 50px;
+  }
+
+  .footer--nav-menu {
+    flex-direction: row;
+    flex-flow: row wrap;
+  }
+
+  /* afegim un punt entre els elements de la llista de l'índex de navegació */
+  .footer--nav-menu > li:not(:last-child)::after {
+    content: ' ·\00a0';
+  }
+
+  .footer--xarxes-socials {
+    min-width: 70px;
+  }
+
   .img-figures__image {
     width: 48vw;
     max-width: 850px;
   }
 
-  .vid-figures {
-    width: revert;
-    height: revert;
-    padding-bottom: revert;
-    max-width: 480px;
-    margin: 0 auto;
-  }
-
-  .vid-figures__vid {
-    position: revert;
-    width: revert;
-    height: revert;
-    min-height: 270px;
-    min-width: 480px;
-  }
-
-  .vid-figures__caption {
-    position: revert;
+  .decorative-img {
+    min-width: 300px;
+    min-height: 180px;
+    top: -180px;
+    left: calc(160px + 10vw);
+    margin-bottom: -180px;
   }
 
   /* afegim el següent codi per tal que quan passem el ratolí
@@ -296,9 +385,5 @@ diferents imatges i vídeos de la pàgina*/
 
   .img-galeria__figure:hover .img-galeria__caption {
     opacity: 1;
-  }
-
-  .footer__font {
-    max-width: 850px;
   }
 }
